--- a/.travis.yml
+++ b/.travis.yml
@@ -21,3 +21,17 @@ after_success:
   - docker push allex24/multi-nginx
   - docker push allex24/multi-server
   - docker push allex24/multi-worker
+
+deploy:
+  provider: elasticbeanstalk
+  region: eu-east-2
+  app: multi-docker
+  env: MultiDocker-env
+  bucket_name: elasticbeanstalk-us-east-2-467304605139
+  bucket_path: docker-multi
+  on:
+    branch: master
+  access_key_id:
+    secure: $AWS_ACCESS_KEY
+  secret_access_key:
+    secure: $AWS_SECRET_KEY
