--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ after_success:
 
 deploy:
   provider: elasticbeanstalk
-  region: eu-east-2
+  region: us-east-2
   app: multi-docker
   env: MultiDocker-env
   bucket_name: elasticbeanstalk-us-east-2-467304605139
